src/components/Note/Note.scss
@import "constants/style.scss";

$note__border-radius: 16px;
$note__text-margin-bottom: 9px;
$note__box-shadow-color: rgba(0, 87, 255, 0.16);
$note__box-shadow-color-dark-mode: rgba(0, 0, 0, 0.2);

$note__indicator-height: 34px;
$note__indicator-width: 3px;

$note__author-name-size: 12px;
$note__author-image-size: 26px;
$note__author-margin-left: 10px;

.note__root {
  list-style-type: none;
  position: relative;
}

.note {
  cursor: pointer;
  padding: $padding--default $padding--medium;
  position: relative;
  border-radius: $note__border-radius;
  background-color: $color-white;
  box-shadow: 0 6px 9px 0 $note__box-shadow-color;
  transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
  z-index: $note-z-index;
}

.note .note__user-avatar {
  height: 34px;
  width: 34px;
  padding: 0;
}

.note__in-stack {
  position: absolute;
  width: calc(100% - 16px);
  height: 100%;
  top: 8px;
  left: 8px;
  opacity: 0.95;
  border-radius: $note__border-radius;
  box-shadow: 0 6px 9px 0 $note__box-shadow-color;
  background-color: $color-white;
  z-index: $note-z-index - $base-z-index-step;
}
[theme="dark"] {
  .note__in-stack {
    background-color: $color-dark-mode-note;
    box-shadow: 0 6px 9px 0 $note__box-shadow-color-dark-mode;
  }
}

[theme="dark"] {
  .note {
    background-color: $color-dark-mode-note;
    box-shadow: 0 6px 9px 0 $note__box-shadow-color-dark-mode;
  }
}

.note:focus-within,
.note:focus,
.note:hover {
  transform: scale(1.02);
  outline: none;
}
.note--isDragging {
  opacity: 0.5;
}
.note--isOver {
  padding: 14px 18px;
  border: 2px solid var(--accent-color);
}
.note--own-card::before {
  content: "";
  display: block;
  position: absolute;
  left: 0;
  width: $note__indicator-width;
  height: $note__indicator-height;
  border-radius: 0 $note__indicator-width $note__indicator-width 0;
  background: var(--accent-color);
}

.note__content {
  position: relative;
  display: flex;
  width: 100%;
}

.note__text {
  margin: 0;
  margin-right: 5px;
  min-height: 3 * $line-height--medium;
  width: calc(100% - 20px);
  color: $color-black;
  font-size: $text-size;
  letter-spacing: $letter-spacing--medium;
  line-height: $line-height--medium;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  margin-bottom: $note__text-margin-bottom;
  word-break: keep-all;
}
[theme="dark"] {
  .note__text {
    color: $color-white;
  }
}

.note__edit {
  position: absolute;
  top: 0;
  right: 0;
  height: 20px;
  width: 20px;
  align-self: end;
  opacity: 0;
  transition: opacity 100ms ease-out;
  display: inline;
  color: $color-dark-gray;
}
[theme="dark"] {
  .note__edit {
    color: $color-white;
  }
}

.note:focus > .note__content > .note__edit,
.note:hover > .note__content > .note__edit {
  opacity: 100%;
}

.note__footer {
  position: relative;
  height: 26px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.note__author {
  display: inline-flex;
  align-items: center;
  // reset css from figure-element:
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  vertical-align: baseline;
}

.note__author-image {
  height: $note__author-image-size;
  width: $note__author-image-size;
  border-radius: 100%;
}

.note__author-name {
  margin-left: $note__author-margin-left;
  color: $color-dark-gray;
  font-size: $note__author-name-size;
  letter-spacing: $letter-spacing--small;
  line-height: $line-height--small;
}

.note__delete-button {
  display: none;
}

.note__delete-button--visible {
  display: block;
}

.note__root-disabled-click {
  cursor: not-allowed;
}

.note__disabled-click {
  pointer-events: none;
}

